--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Shopping List</title>
 
@@ -8,6 +9,7 @@
 
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
 
   <div class="container">
@@ -66,6 +68,9 @@
       </li>
     </ul>
   </div>
-
+  <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
